--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -6,17 +6,14 @@
   <body>
     <h3>Notice for packages:</h3>
     <ul>
-      <li><a href="#0">kotlinx-collections-immutable-jvm (0.3)</a>
+      <li><a href="#1934118923">Accompanist FlowLayout library (0.10.0)</a>
         <dl>
-          <dt>Copyright &copy; 20xx The original author or authors</dt>
+          <dt>Copyright &copy; 20xx Google</dt>
         </dl>
       </li>
-<a name="0"></a>
-      <pre>No license found</pre>
-      <hr>
-      <li><a href="#1934118923">Accompanist Insets library (0.5.1)</a>
+      <li><a href="#1934118923">Accompanist Insets library (0.10.0)</a>
         <dl>
-          <dt>Copyright &copy; 20xx Chris Banes</dt>
+          <dt>Copyright &copy; 20xx Google</dt>
         </dl>
       </li>
       <li><a href="#1934118923">Activity (1.1.0)</a>
@@ -24,22 +21,22 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity (1.3.0-alpha02)</a>
+      <li><a href="#1934118923">Activity (1.3.0-alpha08)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity Compose (1.3.0-alpha02)</a>
+      <li><a href="#1934118923">Activity Compose (1.3.0-alpha08)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity Kotlin Extensions (1.3.0-alpha02)</a>
+      <li><a href="#1934118923">Activity Kotlin Extensions (1.3.0-alpha08)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android AppCompat Library v7 (1.3.0-alpha01)</a>
+      <li><a href="#1934118923">Android AppCompat Library (1.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2011 The Android Open Source Project</dt>
         </dl>
@@ -54,27 +51,27 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android ConstraintLayout Core (1.0.0-alpha3)</a>
+      <li><a href="#1934118923">Android ConstraintLayout Core (1.0.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2007 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android DataStore (1.0.0-alpha06)</a>
+      <li><a href="#1934118923">Android DataStore (1.0.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android DataStore Core (1.0.0-alpha06)</a>
+      <li><a href="#1934118923">Android DataStore Core (1.0.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android DB (2.0.1)</a>
+      <li><a href="#1934118923">Android DB (2.1.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle Kotlin Extensions (2.3.0)</a>
+      <li><a href="#1934118923">Android Lifecycle Kotlin Extensions (2.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
@@ -84,82 +81,77 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle LiveData Core (2.3.0)</a>
+      <li><a href="#1934118923">Android Lifecycle LiveData Core (2.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle Runtime (2.3.0)</a>
+      <li><a href="#1934118923">Android Lifecycle Runtime (2.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle ViewModel (2.3.0)</a>
+      <li><a href="#1934118923">Android Lifecycle ViewModel (2.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle ViewModel Kotlin Extensions (2.3.0)</a>
+      <li><a href="#1934118923">Android Lifecycle ViewModel Kotlin Extensions (2.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle ViewModel with SavedState (2.3.0)</a>
+      <li><a href="#1934118923">Android Lifecycle ViewModel with SavedState (2.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle-Common (2.3.0)</a>
+      <li><a href="#1934118923">Android Lifecycle-Common (2.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Common (2.3.1)</a>
+      <li><a href="#1934118923">Android Navigation Common (2.4.0-alpha01)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Common Kotlin Extensions (2.3.1)</a>
+      <li><a href="#1934118923">Android Navigation Runtime (2.4.0-alpha01)</a>
+        <dl>
+          <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android Navigation Runtime Kotlin Extensions (2.4.0-alpha01)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Runtime (2.3.1)</a>
-        <dl>
-          <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Android Navigation Runtime Kotlin Extensions (2.3.1)</a>
-        <dl>
-          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Android Preferences DataStore (1.0.0-alpha06)</a>
+      <li><a href="#1934118923">Android Preferences DataStore (1.0.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Preferences DataStore Core (1.0.0-alpha06)</a>
+      <li><a href="#1934118923">Android Preferences DataStore Core (1.0.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Resources Library (1.3.0-alpha01)</a>
+      <li><a href="#1934118923">Android Resources Library (1.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Room Kotlin Extensions (2.2.6)</a>
+      <li><a href="#1934118923">Android Room Kotlin Extensions (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Room-Common (2.2.6)</a>
+      <li><a href="#1934118923">Android Room-Common (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Room-Runtime (2.2.6)</a>
+      <li><a href="#1934118923">Android Room-Runtime (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
@@ -174,7 +166,7 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support Library Annotations (1.2.0-beta01)</a>
+      <li><a href="#1934118923">Android Support Library Annotations (1.2.0)</a>
         <dl>
           <dt>Copyright &copy; 2013 The Android Open Source Project</dt>
         </dl>
@@ -184,7 +176,7 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support Library compat (1.5.0-beta01)</a>
+      <li><a href="#1934118923">Android Support Library compat (1.5.0)</a>
         <dl>
           <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
         </dl>
@@ -204,7 +196,7 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support Library fragment (1.3.0-alpha07)</a>
+      <li><a href="#1934118923">Android Support Library fragment (1.3.4)</a>
         <dl>
           <dt>Copyright &copy; 2011 The Android Open Source Project</dt>
         </dl>
@@ -224,7 +216,7 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support SQLite - Framework Implementation (2.0.1)</a>
+      <li><a href="#1934118923">Android Support SQLite - Framework Implementation (2.1.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
@@ -244,107 +236,112 @@
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation (1.0.0-alpha12)</a>
-        <dl>
-          <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Compose Animation Core (1.0.0-alpha12)</a>
-        <dl>
-          <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Compose Foundation (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Collections Kotlin Extensions (1.1.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Geometry (1.0.0-alpha12)</a>
-        <dl>
-          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Compose Graphics (1.0.0-alpha12)</a>
-        <dl>
-          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Compose Layouts (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Animation (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose LiveData integration (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Animation Core (1.0.0-beta07)</a>
         <dl>
-          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+          <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Components (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Foundation (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Icons Core (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Geometry (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Ripple (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Graphics (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Navigation (1.0.0-alpha07)</a>
-        <dl>
-          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Compose Runtime (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Layouts (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Saveable (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose LiveData integration (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Material Components (1.0.0-beta07)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Compose Material Icons Core (1.0.0-beta07)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Compose Material Ripple (1.0.0-beta07)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Compose Navigation (2.4.0-alpha01)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Compose Runtime (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling Data (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Saveable (1.0.0-beta07)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Compose Tooling (1.0.0-beta07)</a>
+        <dl>
+          <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Compose Tooling Data (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI primitives (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose UI primitives (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI Text (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose UI Text (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Unit (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Unit (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Util (1.0.0-alpha12)</a>
+      <li><a href="#1934118923">Compose Util (1.0.0-beta07)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">ConstraintLayout for Jetpack Compose (1.0.0-alpha02)</a>
+      <li><a href="#1934118923">ConstraintLayout for Jetpack Compose (1.0.0-alpha07)</a>
         <dl>
           <dt>Copyright &copy; 2007 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Core Kotlin Extensions (1.1.0)</a>
+      <li><a href="#1934118923">Core Kotlin Extensions (1.5.0-beta03)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
@@ -354,32 +351,42 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
+      <li><a href="#1934118923">Experimental annotation (1.1.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
+        </dl>
+      </li>
       <li><a href="#1934118923">IntelliJ IDEA Annotations (13.0)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib (1.4.30)</a>
+      <li><a href="#1934118923">Kotlin Stdlib (1.4.32)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib Common (1.4.30)</a>
+      <li><a href="#1934118923">Kotlin Stdlib Common (1.4.32)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">kotlinx-coroutines-android (1.4.1)</a>
+      <li><a href="#1934118923">kotlinx-collections-immutable (0.3.4)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">kotlinx-coroutines-core (1.4.1)</a>
+      <li><a href="#1934118923">kotlinx-coroutines-android (1.4.3)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Lifecycle ViewModel Compose (1.0.0-alpha01)</a>
+      <li><a href="#1934118923">kotlinx-coroutines-core (1.4.3)</a>
+        <dl>
+          <dt>Copyright &copy; 20xx JetBrains Team</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Lifecycle ViewModel Compose (1.0.0-alpha05)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
@@ -389,7 +396,7 @@
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">VersionedParcelable (1.1.0)</a>
+      <li><a href="#1934118923">VersionedParcelable (1.1.1)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
